# canada_climate_analysis

./: .gitignore  README.md  climate_app.py  climate_cache.py  config.py  constants.py  main.py  migrate_cache.py  msc_client.py  pyproject.toml  report_generator.py  report_plots.py  template.html  test_climate_cache.py  test_msc_client.py  test_report_generator.py  test_trend_calculation.py
reports/: climate_report_monthly_1925-2026_calgary.html  climate_report_monthly_1925-2026_calgary_and_edmonton.html  climate_report_monthly_1950-2026_calgary.html
