[project]
name = "2026-02-15-climate-analysis"
version = "0.1.0"
description = "Climate data analysis from MSC GeoMet"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "polars>=1.21.0",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "ruff>=0.15.1",
    "requests-cache>=1.3.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.ruff.lint.isort]
force-single-line = true
